// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SelectOperatives component should disable the current operative when a current user payroll number is supplied 1`] = `
<DocumentFragment>
  <fieldset
    aria-describedby="completionTime-hint"
    class="govuk-fieldset lbh-fieldset"
    role="group"
  >
    <div
      class="operatives govuk-form-group"
    >
      <legend
        class="govuk-fieldset__legend govuk-fieldset__legend--s"
      >
        Operatives
      </legend>
      <span
        class="govuk-hint lbh-hint"
        id="completionTime-hint"
      >
        Search by operative name and select from the list
      </span>
      <div
        class="operatives-group"
      >
        <div
          class="govuk-form-group lbh-form-group operative-datalist"
          id="operative-disabled-0-form-group"
        >
          <label
            class="govuk-label lbh-label"
            for="operative-disabled-0"
          >
            Operative name 1 *  
          </label>
          <input
            aria-disabled="disabled"
            autocomplete="off"
            class="govuk-select lbh-select govuk-!-width-full"
            data-testid="operative-disabled-0"
            disabled=""
            id="operative-disabled-0"
            list="autocomplete-list-operative-disabled-0"
            name="operative-disabled-0"
            value="Operative A [1]"
          />
          <datalist
            id="autocomplete-list-operative-disabled-0"
          >
            <option
              value="Operative A [1]"
            />
            <option
              value="Operative B [2]"
            />
            <option
              value="Operative C [3]"
            />
          </datalist>
        </div>
        <input
          name="operative-0"
          type="hidden"
          value="Operative A [1]"
        />
        <div
          class="select-percentage"
        >
          <div
            class="govuk-form-group lbh-form-group"
            id="percentage-0-form-group"
          >
            <label
              class="govuk-label lbh-label"
              for="percentage-0"
            >
              Work done 
            </label>
            <select
              class="govuk-select lbh-select undefined"
              data-testid="percentage-0"
              id="percentage-0"
              name="percentage-0"
            >
              <option
                value=""
              />
              <option
                value="100%"
              >
                100%
              </option>
              <option
                value="90%"
              >
                90%
              </option>
              <option
                value="80%"
              >
                80%
              </option>
              <option
                value="70%"
              >
                70%
              </option>
              <option
                value="60%"
              >
                60%
              </option>
              <option
                value="50%"
              >
                50%
              </option>
              <option
                value="40%"
              >
                40%
              </option>
              <option
                value="33.3%"
              >
                33.3%
              </option>
              <option
                value="30%"
              >
                30%
              </option>
              <option
                value="20%"
              >
                20%
              </option>
              <option
                value="10%"
              >
                10%
              </option>
              <option
                value="-"
              >
                -
              </option>
            </select>
          </div>
        </div>
        <div
          class="smv-read-only"
        >
          <p
            class="lbh-body smv-read-only--label"
          >
            SMV
          </p>
          <p
            class="lbh-body smv-read-only--value"
          >
            0.33
          </p>
        </div>
      </div>
      <div
        class="operatives-group"
      >
        <div
          class="govuk-form-group lbh-form-group operative-datalist"
          id="operative-1-form-group"
        >
          <label
            class="govuk-label lbh-label"
            for="operative-1"
          >
            Operative name 2 *  
          </label>
          <input
            autocomplete="off"
            class="govuk-select lbh-select govuk-!-width-full"
            data-testid="operative-1"
            id="operative-1"
            list="autocomplete-list-operative-1"
            name="operative-1"
            value="Operative B [2]"
          />
          <datalist
            id="autocomplete-list-operative-1"
          >
            <option
              value="Operative A [1]"
            />
            <option
              value="Operative B [2]"
            />
            <option
              value="Operative C [3]"
            />
          </datalist>
        </div>
        <div
          class="select-percentage"
        >
          <div
            class="govuk-form-group lbh-form-group"
            id="percentage-1-form-group"
          >
            <label
              class="govuk-label lbh-label"
              for="percentage-1"
            >
              Work done 
            </label>
            <select
              class="govuk-select lbh-select undefined"
              data-testid="percentage-1"
              id="percentage-1"
              name="percentage-1"
            >
              <option
                value=""
              />
              <option
                value="100%"
              >
                100%
              </option>
              <option
                value="90%"
              >
                90%
              </option>
              <option
                value="80%"
              >
                80%
              </option>
              <option
                value="70%"
              >
                70%
              </option>
              <option
                value="60%"
              >
                60%
              </option>
              <option
                value="50%"
              >
                50%
              </option>
              <option
                value="40%"
              >
                40%
              </option>
              <option
                value="33.3%"
              >
                33.3%
              </option>
              <option
                value="30%"
              >
                30%
              </option>
              <option
                value="20%"
              >
                20%
              </option>
              <option
                value="10%"
              >
                10%
              </option>
              <option
                value="-"
              >
                -
              </option>
            </select>
          </div>
        </div>
        <div
          class="smv-read-only"
        >
          <p
            class="lbh-body smv-read-only--label"
          >
            SMV
          </p>
          <p
            class="lbh-body smv-read-only--value"
          >
            0.33
          </p>
        </div>
      </div>
      <div
        class="operatives-group"
      >
        <div
          class="govuk-form-group lbh-form-group operative-datalist"
          id="operative-2-form-group"
        >
          <label
            class="govuk-label lbh-label"
            for="operative-2"
          >
            Operative name 3 *  
          </label>
          <input
            autocomplete="off"
            class="govuk-select lbh-select govuk-!-width-full"
            data-testid="operative-2"
            id="operative-2"
            list="autocomplete-list-operative-2"
            name="operative-2"
            value="Operative C [3]"
          />
          <datalist
            id="autocomplete-list-operative-2"
          >
            <option
              value="Operative A [1]"
            />
            <option
              value="Operative B [2]"
            />
            <option
              value="Operative C [3]"
            />
          </datalist>
        </div>
        <div
          class="select-percentage"
        >
          <div
            class="govuk-form-group lbh-form-group"
            id="percentage-2-form-group"
          >
            <label
              class="govuk-label lbh-label"
              for="percentage-2"
            >
              Work done 
            </label>
            <select
              class="govuk-select lbh-select undefined"
              data-testid="percentage-2"
              id="percentage-2"
              name="percentage-2"
            >
              <option
                value=""
              />
              <option
                value="100%"
              >
                100%
              </option>
              <option
                value="90%"
              >
                90%
              </option>
              <option
                value="80%"
              >
                80%
              </option>
              <option
                value="70%"
              >
                70%
              </option>
              <option
                value="60%"
              >
                60%
              </option>
              <option
                value="50%"
              >
                50%
              </option>
              <option
                value="40%"
              >
                40%
              </option>
              <option
                value="33.3%"
              >
                33.3%
              </option>
              <option
                value="30%"
              >
                30%
              </option>
              <option
                value="20%"
              >
                20%
              </option>
              <option
                value="10%"
              >
                10%
              </option>
              <option
                value="-"
              >
                -
              </option>
            </select>
          </div>
        </div>
        <div
          class="smv-read-only"
        >
          <p
            class="lbh-body smv-read-only--label"
          >
            SMV
          </p>
          <p
            class="lbh-body smv-read-only--value"
          >
            0.33
          </p>
        </div>
      </div>
      <div>
        <a
          class="lbh-link"
          href="#"
        >
          + Add operative
        </a>
      </div>
      <div>
        <a
          class="lbh-link"
          href="#"
        >
          - Remove last operative
        </a>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`SelectOperatives component should render properly 1`] = `
<DocumentFragment>
  <fieldset
    aria-describedby="completionTime-hint"
    class="govuk-fieldset lbh-fieldset"
    role="group"
  >
    <div
      class="operatives govuk-form-group"
    >
      <legend
        class="govuk-fieldset__legend govuk-fieldset__legend--s"
      >
        Operatives
      </legend>
      <span
        class="govuk-hint lbh-hint"
        id="completionTime-hint"
      >
        Search by operative name and select from the list
      </span>
      <div
        class="operatives-group"
      >
        <div
          class="govuk-form-group lbh-form-group operative-datalist"
          id="operative-0-form-group"
        >
          <label
            class="govuk-label lbh-label"
            for="operative-0"
          >
            Operative name 1 *  
          </label>
          <input
            autocomplete="off"
            class="govuk-select lbh-select govuk-!-width-full"
            data-testid="operative-0"
            id="operative-0"
            list="autocomplete-list-operative-0"
            name="operative-0"
            value="Operative A [1]"
          />
          <datalist
            id="autocomplete-list-operative-0"
          >
            <option
              value="Operative A [1]"
            />
            <option
              value="Operative B [2]"
            />
            <option
              value="Operative C [3]"
            />
          </datalist>
        </div>
        <div
          class="select-percentage"
        >
          <div
            class="govuk-form-group lbh-form-group"
            id="percentage-0-form-group"
          >
            <label
              class="govuk-label lbh-label"
              for="percentage-0"
            >
              Work done 
            </label>
            <select
              class="govuk-select lbh-select undefined"
              data-testid="percentage-0"
              disabled=""
              id="percentage-0"
              name="percentage-0"
            >
              <option
                value=""
              />
              <option
                value="100%"
              >
                100%
              </option>
              <option
                value="-"
              >
                -
              </option>
            </select>
          </div>
          <div
            style="display: none;"
          >
            <div
              class="govuk-form-group lbh-form-group"
              id="percentage-0-form-group"
            >
              <label
                class="govuk-label lbh-label"
                for="percentage-0"
              >
                Work done 
              </label>
              <select
                class="govuk-select lbh-select undefined"
                data-testid="percentage-0"
                id="percentage-0"
                name="percentage-0"
              >
                <option
                  value=""
                />
                <option
                  value="100%"
                >
                  100%
                </option>
                <option
                  value="-"
                >
                  -
                </option>
              </select>
            </div>
          </div>
        </div>
        <div
          class="smv-read-only"
        >
          <p
            class="lbh-body smv-read-only--label"
          >
            SMV
          </p>
          <p
            class="lbh-body smv-read-only--value"
          >
            1
          </p>
        </div>
      </div>
      <div>
        <a
          class="lbh-link"
          href="#"
        >
          + Add operative
        </a>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;
